crates/oxc_css_parser/tests/error/scss/value/operators/plus-trailing-dot.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: component value is expected
  ┌─ plus-trailing-dot.scss:1:8
  │
1 │ a {b: +.}
  │        ^


